@@ -213,3 +213,4 @@ Fixed Bugs:
   start correctly due to different traversal of the SceneFlow.
 - Fixed EOS teases setting a non-image file as Title Image.
 - General tease download (UI) fixes.
+- Editor search bar fixes.
